// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> SearchBar - with one additional button 1`] = `
<div
  className="searchbar"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 "
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    
  </form>
  <div
    className="searchbar-actions"
  >
    <button
      className="btn btn-default"
    >
      Submit
    </button>
  </div>
</div>
`;

exports[`<SearchBar /> SearchBar - with two additional buttons 1`] = `
<div
  className="searchbar"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 "
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    
  </form>
  <div
    className="searchbar-actions"
  >
    <button
      className="btn btn-primary"
    >
      Submit
    </button>
    <button
      className="btn btn-default"
    >
      Reset
    </button>
  </div>
</div>
`;

exports[`<SearchBar /> SearchBar 1`] = `
<div
  className="searchbar"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 "
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    
  </form>
</div>
`;

exports[`<SearchBar /> SearchBar with border 1`] = `
<div
  className="searchbar with-border"
>
  <form
    className="searchbar-form"
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      className="searchbar-input form-control"
      onChange={[Function]}
      onKeyDown={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
    <svg
      aria-hidden="true"
      className="svg-inline--fa fa-search fa-w-16 "
      data-icon="search"
      data-prefix="fas"
      focusable="false"
      role="img"
      style={Object {}}
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
        fill="currentColor"
        style={Object {}}
      />
    </svg>
    
  </form>
</div>
`;
